[workspace.package]
version = "0.1.0"
authors = ["Mary Guillemard <mary@mary.zone>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.67"

[workspace]
members = ["boxxo/", "boxxo-hal/", "hulemy/"]
resolver = "2"

[workspace.dependencies]
# In workspace
boxxo = { version = "0.1.0", path = "./boxxo" }
boxxo-hal = { version = "0.1.0", path = "./boxxo-hal" }
hulemy = { version = "0.1.0", path = "./hulemy" }

# External
critical-section = "1.0"
cortex-m = "0.7"
cortex-m-rt = "0.6.15"
cortex-m-semihosting = "0.5"
panic-halt = "0.2.0"
vcell = "0.1"
