[package]
name = "boxxo"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
critical-section = { workspace = true, optional = true }
cortex-m.workspace = true
cortex-m-rt = { workspace = true, optional = true }
vcell.workspace = true

[features]
rt = ["cortex-m-rt/device"]
critical-section = ["dep:critical-section"]
