[package]
name = "hulemy"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
boxxo = { workspace = true, features = ["rt", "critical-section"] }
boxxo-hal = { workspace = true }
cortex-m = { workspace = true, features = ["critical-section-single-core"] }
cortex-m-rt.workspace = true
cortex-m-semihosting.workspace = true
critical-section.workspace = true
panic-halt.workspace = true
